--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<script></script>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="MainContainer">
+        <div class="TopContainer">
+            <div class="LeftContainer"></div>
+            <div class="RightContainer"></div>
+        </div>
+        <div class="BottomContainer">
+            <div class="container1"></div>
+            <div class="container2"></div>
+            <div class="container3"></div>
+            <div class="container4"></div>
+            <div class="container5"></div>
+            <div class="container6"></div>
+        </div>
+    </div>
+</body>
+<script src="RockPaperScissors.js"></script>
+
+</html>
