--- a/index.html
+++ b/index.html
@@ -5,25 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="RockPaperScissors.js" defer></script>
     <title>Document</title>
 </head>
 
 <body>
-    <div class="MainContainer">
-        <div class="TopContainer">
-            <div class="LeftContainer"></div>
-            <div class="RightContainer"></div>
-        </div>
-        <div class="BottomContainer">
-            <div class="container1"></div>
-            <div class="container2"></div>
-            <div class="container3"></div>
-            <div class="container4"></div>
-            <div class="container5"></div>
-            <div class="container6"></div>
-        </div>
+    <div class="container">
+        <h3>The Rock Paper Scissor game!
+            WHO will Win?!</h3>
     </div>
+
+    <button class="hand">Rock</button>
+    <button class="hand">Paper</button>
+    <button class="hand">Scissors</button>
+
+    <div class="container2">
+        <p id="status"></p>
+        <p id="playerScore"></p>
+        <p id="computerScore"></p>
+    </div>
+
+    <button id="reload">Play again!</button>
+
+
+
 </body>
-<script src="RockPaperScissors.js"></script>
 
 </html>
